[package]
authors = ["Darius C", "Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
edition = "2021"
homepage = "https://github.com/dariusc93/rust-igd"
keywords = ["igd", "upnp", "tokio", "async-std"]
license = "MIT"
name = "igd-next"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-igd"
version = "0.16.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
attohttpc = { version = "0.24", default-features = false }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
http = { version = "1", optional = true }
log = "0.4"
rand = "0.9.0"
tokio = { version = "1", optional = true, features = ["net"] }
http-body-util = { version = "0.1", optional = true }

url = "2"
xmltree = "0.10"
async-trait = { version = "0.1.72", optional = true }

[dependencies.hyper]
default-features = false
features = ["client", "http1", "http2"]
optional = true
version = "1"

[dependencies.hyper-util]
default-features = false
features = ["client", "client-legacy", "http1", "http2"]
optional = true
version = "0.1"

[dev-dependencies]
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }

[features]
aio_tokio = ["futures", "tokio", "hyper", "hyper-util", "http-body-util", "bytes", "http", "async-trait"]
default = []

[[example]]
name = "add_any_port"

[[example]]
name = "add_port"

[[example]]
name = "add_remove"

[[example]]
name = "aio_tokio"
required-features = ["aio_tokio"]

[[example]]
name = "external_ip"

[[example]]
name = "remove_port"
