[package]
authors = ["Darius C", "Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
edition = "2021"
homepage = "https://github.com/dariusc93/rust-igd"
keywords = ["igd", "upnp", "tokio"]
license = "MIT"
rust-version = "1.75"
name = "igd-next"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-igd"
version = "0.17.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
attohttpc = { version = "0.30.0", default-features = false, optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
http = { version = "1", optional = true }
log = "0.4"
rand = "0.10"
tokio = { version = "1", optional = true, features = ["net"] }
http-body-util = { version = "0.1", optional = true }

thiserror = "2.0.18"

url = "2"
xmltree = "0.10"

[dependencies.hyper]
default-features = false
features = ["client", "http1", "http2"]
optional = true
version = "1"

[dependencies.hyper-util]
default-features = false
features = ["client", "client-legacy", "http1", "http2"]
optional = true
version = "0.1"

[dev-dependencies]
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }

[features]
default = ["io_sync"]
io_sync = ["attohttpc"]
aio_tokio = ["futures", "tokio", "hyper", "hyper-util", "http-body-util", "bytes", "http"]

[[example]]
name = "add_any_port"
required-features = ["io_sync"]

[[example]]
name = "add_port"
required-features = ["io_sync"]

[[example]]
name = "add_remove"
required-features = ["io_sync"]

[[example]]
name = "aio_tokio"
required-features = ["aio_tokio"]

[[example]]
name = "external_ip"
required-features = ["io_sync"]

[[example]]
name = "remove_port"
required-features = ["io_sync"]
